# port-killer

./: .gitignore  CONTRIBUTING.md  Package.swift  README.md  appcast.xml  package.json
.github/workflows/: ci-windows.yml  ci.yml  cli-release.yml  pr-build.yml  release.yml
Resources/: Info.plist  PortKiller.entitlements  descriptions.json
Resources/AppIcon.icon/: icon.json
Sources/: AppState+KeyboardShortcuts.swift  AppState+PortOperations.swift  AppState.swift  Constants.swift  PortKillerApp.swift  PortScanner.swift  ProcessDescriptionService.swift
Sources/Assets.xcassets/ToolbarIcon.imageset/: Contents.json
Sources/Config/: SharedConfigStore.swift
Sources/Managers/: KubernetesDiscoveryManager.swift  PortForwardManager+Execution.swift  PortForwardManager+Monitoring.swift  PortForwardManager.swift  PortForwardProcessManager+ConflictResolution.swift  PortForwardProcessManager+Kubernetes.swift  PortForwardProcessManager.swift  SponsorManager.swift  UpdateManager.swift
Sources/Models/: KubernetesModels.swift  Models.swift  PortFilter.swift  PortForwardConnection.swift  PortInfo.swift  ProcessDescription.swift  ProcessType.swift  Sponsor.swift  WatchedPort.swift
Sources/RustBridge/: RustPortScanner.swift  portkiller_ffi.swift  portkiller_ffiFFI.h  portkiller_ffiFFI.modulemap
Sources/Services/: SponsorsService.swift
Sources/Views/: MainWindowView.swift  MenuBarView.swift  PortDetailView.swift  PortTableView.swift  SettingsView.swift  SidebarView.swift  SponsorsWindowView.swift
Sources/Views/CloudflareTunnels/: CloudflareTunnelsView.swift
Sources/Views/Components/: CheckForUpdatesView.swift  CloudflaredMissingBanner.swift  NestedPortRow.swift  ProcessGroupListRow.swift  ProcessGroupRow.swift  TunnelStatusBadge.swift
Sources/Views/MenuBar/: MenuBarActions.swift  MenuBarPortList.swift  MenuBarPortRow.swift  MenuBarTunnelRow.swift
Sources/Views/PortForwarder/: PortForwardConnectionCard.swift  PortForwardConnectionEditForm.swift  PortForwarderSidebarContent.swift  PortForwarderToolbar.swift  PortForwarderWindowView.swift  ServiceBrowserView.swift
Sources/Views/PortForwarder/Browser/: AddCustomNamespaceSheet.swift  NamespaceListView.swift
Sources/Views/PortForwarder/DetailPanel/: ConnectionEditSection.swift  ConnectionInfoSection.swift  OptionsSection.swift  PortMappingSection.swift  (+1 more)
Sources/Views/PortTable/: PortListRow.swift
Sources/Views/Settings/: AdvancedSettingsSection.swift  GeneralSettingsSection.swift  PortForwardingSettingsSection.swift  SettingsView.swift
Tests/PortKillerTests/: IntegrationTests.swift  ProcessDescriptionServiceTests.swift
backend/: Cargo.toml  README.md
backend/cli/: Cargo.toml
backend/cli/src/: main.rs
backend/cli/src/commands/: config.rs  favorites.rs  kill.rs  list.rs  mod.rs  watch.rs
backend/cli/src/tui/: app.rs  mod.rs  ui.rs
backend/core/: Cargo.toml
backend/core/examples/: interactive.rs  scan_ports.rs
backend/core/src/: config.rs  engine.rs  error.rs  killer.rs  lib.rs
backend/core/src/adapters/: mod.rs
backend/core/src/adapters/scanner/: darwin.rs  linux.rs  mod.rs  utils.rs  windows.rs
backend/core/src/application/: mod.rs  port_service.rs
backend/core/src/domain/: mod.rs  port.rs  watched.rs
backend/core/src/kubernetes/: config_store.rs  connection_manager.rs  discovery.rs  errors.rs  mod.rs  models.rs  process_manager.rs
backend/core/src/models/: mod.rs  port_info.rs  process_type.rs
backend/core/src/ports/: config.rs  killer.rs  mod.rs  scanner.rs
backend/core/src/scanner/: darwin.rs  linux.rs  mod.rs  utils.rs
backend/ffi/: Cargo.toml
backend/ffi/src/: lib.rs  lib.udl
cli/: .gitignore  README.md  go.mod  go.sum  install.sh  main.go  release.sh
cli/cmd/: favorites.go  kill.go  list.go  root.go  watch.go
cli/internal/config/: config.go  darwin.go  other.go  store.go
cli/internal/scanner/: darwin.go  linux.go  scanner.go  windows.go
cli/internal/tui/: app.go  command.go  export.go  keys.go  log_fetcher.go  messages.go  port_actions.go  types.go  update.go  view.go
portkiller-core/: Cargo.toml  rust-toolchain.toml
portkiller-core/src/: lib.rs  models.rs
portkiller-core/src/process/: linux.rs  macos.rs  mod.rs  windows.rs
portkiller-core/src/scanner/: linux.rs  macos.rs  mod.rs  windows.rs
portkiller-ffi/: Cargo.toml
portkiller-ffi/include/: module.modulemap  portkiller.h
portkiller-ffi/src/: lib.rs
scripts/: build-app.sh  build-debug.sh  build-rust-xcframework.sh  build-rust.sh  setup-xcode.sh
tools/: test-rust-ffi.swift  test-rust-simple.swift
(+4 files in other folders)
