[workspace]
resolver = "2"
members = ["core", "cli", "ffi"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["PortKiller Contributors"]

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "time", "rt-multi-thread", "macros", "io-util"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"

# Core crate
portkiller-core = { path = "core" }
