[package]
name = "portkiller-core"
version = "0.1.0"
edition = "2021"
authors = ["PortKiller Team"]
description = "Cross-platform port scanning and process management library"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "process", "sync", "time", "macros"] }
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading"
] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
ffi = []  # Enable when building for FFI
