[package]
name = "portkiller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for managing processes on network ports"

[[bin]]
name = "portkiller"
path = "src/main.rs"

[dependencies]
portkiller-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# CLI
clap = { version = "4", features = ["derive", "color", "suggestions"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
anyhow = "1"
chrono = "0.4"
atty = "0.2"
